--- a/TODO
+++ b/TODO
@@ -3,3 +3,5 @@
 * Raise less generic errors than Runtime Error.
 * Add option to check for remote timeouts in middleware
 * Add option to force local timeouts in faraday.
+* Use optimizer to collapse nested operations.
+* Add optimizer stage to reorder relation in a way unsupported operations are not done on gateway relation.
