--- a/TODO
+++ b/TODO
@@ -5,4 +5,4 @@
 * Add option to force local timeouts in faraday.
 * Use optimizer to collapse nested operations.
 * Add optimizer stage to reorder relation in a way unsupported operations are not done on gateway relation.
-* Add elasticsearch adapter specific gateway that does only wrap supported parts of algebra.
+* Make sure gateway does not return new gateway when supported operation is created twice
