--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 * Investigate into thrift connection for performance better than http. 
   http://www.elasticsearch.org/guide/reference/modules/thrift.html
+* Check if faraday lowercases all headers.
 * Raise less generic errors than Runtime Error.
 * Add option to check for remote timeouts in middleware
 * Add option to force local timeouts in faraday.
