Use Veritas::Immutable instead of lazy ivar.
* Adjust flay for ruby-1.9

--- a/TODO
+++ b/TODO
@@ -6,6 +6,6 @@
 * Use optimizer to collapse nested operations.
 * Add optimizer stage to reorder relation in a way unsupported operations are not done on gateway relation.
 * Add write support once veritas has writable relations
-* Use Veritas::Immutable instead of @ivar ||= expression
 * Use Veritas::Proxy to simplify gateway
 * Fix/Workaround coredump in jruby-19mode http://travis-ci.org/#!/mbj/veritas-elasticsearch-adapter/jobs/1768119
+* Push a bugreport to yard or yardstick to fix def each; super; end in Query::Unlimited and Query::Limited
